<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/whatIsAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatIsAppText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/appExplanationTextView"
        android:layout_width="357dp"
        android:layout_height="254dp"
        android:text="@string/appExplanationText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatIsAppTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/explainAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="explainApp"
        android:text="@string/explainAppBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appExplanationTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/explainClassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="explainClass"
        android:text="@string/explainClassBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explainAppBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/explainRaceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="explainRace"
        android:text="@string/explainRaceBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explainClassBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/explainAbScoresBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="explainAbScores"
        android:text="@string/explainAbScoresBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explainRaceBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/returnToAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToApp"
        android:text="@string/returnToAppBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explainAbScoresBtn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>