<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterBrowse">

    <ImageView
        android:id="@+id/myBackgroundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drawable_background" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/blankStatText" />

    <TextView
        android:id="@+id/classText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/classTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/classTextView"
        app:layout_constraintTop_toBottomOf="@+id/classTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/raceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raceTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/classText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/classText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/raceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/raceTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/raceTextView"
        app:layout_constraintTop_toBottomOf="@+id/raceTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/abilityScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abilityScoresTitleText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/constitutionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dexterityText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constitutionTextView"
        app:layout_constraintTop_toBottomOf="@+id/dexterityText"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/strengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toEndOf="@+id/strengthTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/charismaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wisdomText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/charismaTextView"
        app:layout_constraintTop_toBottomOf="@+id/wisdomText"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/intelligenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intelligenceTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constitutionTextView"
        app:layout_constraintTop_toBottomOf="@+id/constitutionTextView"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/charismaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charismaTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/wisdomTextView"
        app:layout_constraintTop_toBottomOf="@+id/wisdomTextView"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/constitutionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constitutionTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dexterityTextView"
        app:layout_constraintTop_toBottomOf="@+id/dexterityTextView"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/dexterityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/strengthText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dexterityTextView"
        app:layout_constraintTop_toBottomOf="@+id/strengthText"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/strengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strengthTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/wisdomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/intelligenceText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/wisdomTextView"
        app:layout_constraintTop_toBottomOf="@+id/intelligenceText"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/wisdomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wisdomTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/intelligenceTextView"
        app:layout_constraintTop_toBottomOf="@+id/intelligenceTextView"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/dexterityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dexterityTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/strengthTextView"
        app:layout_constraintTop_toBottomOf="@+id/strengthTextView"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/intelligenceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/blankStatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constitutionText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/intelligenceTextView"
        app:layout_constraintTop_toBottomOf="@+id/constitutionText"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/classTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/classTitleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/backFromBrowseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToMain"
        android:text="@string/returnToAppBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>